{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 31,
  "lineage": "ec4206a1-3e93-9939-48c3-9a1c4aeb9930",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion-elastic-ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f02c08131919c942",
            "domain": "vpc",
            "id": "eipalloc-0849ef171c16a40ee",
            "instance": "i-08989620f8840e9e6",
            "network_interface": "eni-0d829411681b8d1aa",
            "private_dns": "ip-10-0-14-171.eu-west-3.compute.internal",
            "private_ip": "10.0.14.171",
            "public_dns": "ec2-15-188-227-85.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.227.85",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "mixed",
              "Name": "JA-tf BASTION EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_vpc.main_selected_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-elastic-ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-9d4ecf61",
            "domain": "vpc",
            "id": "eipalloc-0782160dda64938d3",
            "network_interface": "eni-0fa721818bbc8b522",
            "private_dns": "ip-10-0-5-132.eu-west-3.compute.internal",
            "private_ip": "10.0.5.132",
            "public_dns": "ec2-35-181-77-67.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.181.77.67",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "mixed",
              "Name": "JA-tf- NAT GW EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_vpc.main_selected_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "JA_tf_test_load_balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "availability_zones": [
              "eu-west-3a"
            ],
            "id": "JA-tf-test-elb",
            "listener": [
              {
                "instance_port": 8000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "JA-tf-test-elb",
            "tags": {
              "Name": "JA-tf-test-elb"
            }
          },
          "dependencies": [
            "aws_s3_bucket.JA_tf_test_main_bucket"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03b4b78aae82b30f1",
            "arn": "arn:aws:ec2:eu-west-3:540690943472:instance/i-08989620f8840e9e6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08989620f8840e9e6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "JA_Bastion",
            "monitoring": true,
            "primary_network_interface_id": "eni-0d829411681b8d1aa",
            "private_dns": "ip-10-0-14-171.eu-west-3.compute.internal",
            "private_ip": "10.0.14.171",
            "public_ip": "15.188.227.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-010b16ff148bf0916",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02bdcbb5d66cfd3ca",
            "tags": {
              "Environment": "mixed",
              "Name": "JA-tf-test Bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09b052ad40b7c3ae9"
            ]
          },
          "dependencies": [
            "aws_security_group.JA_tf_bastion_allow_ssh",
            "aws_subnet.JA_tf_test_main_subnet-az1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ff33332a3375c4df",
            "owner_id": "540690943472",
            "tags": {
              "Environment": "mixed",
              "Name": "JA-tf Internet GW"
            },
            "vpc_id": "vpc-0553d4ec4e36d1c59"
          },
          "dependencies": [
            "aws_vpc.main_selected_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0782160dda64938d3",
            "id": "nat-0b63120d5e09aa04b",
            "network_interface_id": "eni-0fa721818bbc8b522",
            "private_ip": "10.0.5.132",
            "public_ip": "35.181.77.67",
            "subnet_id": "subnet-02bdcbb5d66cfd3ca",
            "tags": {
              "Environment": "mixed",
              "Name": "JA-tf NAT GW"
            }
          },
          "dependencies": [
            "aws_eip.nat-elastic-ip",
            "aws_internet_gateway.internet-gw",
            "aws_subnet.JA_tf_test_main_subnet-az1",
            "aws_vpc.main_selected_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-subnets-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-017d4be8be44910f2",
            "owner_id": "540690943472",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0b63120d5e09aa04b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "mixed",
              "Name": "JA-tf Private Subnets RT"
            },
            "vpc_id": "vpc-0553d4ec4e36d1c59"
          },
          "dependencies": [
            "aws_eip.nat-elastic-ip",
            "aws_internet_gateway.internet-gw",
            "aws_nat_gateway.nat-gateway",
            "aws_subnet.JA_tf_test_main_subnet-az1",
            "aws_vpc.main_selected_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-subnets-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08e389a7aabe53a0e",
            "owner_id": "540690943472",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ff33332a3375c4df",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "mixed",
              "Name": "JA-tf Public Subnets RT"
            },
            "vpc_id": "vpc-0553d4ec4e36d1c59"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_vpc.main_selected_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_rt_assoc-az1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c8d56d558cbee6b",
            "route_table_id": "rtb-08e389a7aabe53a0e",
            "subnet_id": "subnet-02bdcbb5d66cfd3ca"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_route_table.public-subnets-route-table",
            "aws_subnet.JA_tf_test_main_subnet-az1",
            "aws_vpc.main_selected_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_rt_assoc-az2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020b30bfa18a46486",
            "route_table_id": "rtb-08e389a7aabe53a0e",
            "subnet_id": "subnet-0f028abc5fc50c3ee"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_route_table.public-subnets-route-table",
            "aws_subnet.JA_tf_test_secondary_subnet-az2",
            "aws_vpc.main_selected_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_rt_assoc-az3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab65569aa6e00a42",
            "route_table_id": "rtb-08e389a7aabe53a0e",
            "subnet_id": "subnet-054cf0ae1c0d36e2d"
          },
          "dependencies": [
            "aws_route_table.public-subnets-route-table",
            "aws_subnet.JA_tf_test_terciary_subnet-az3",
            "aws_vpc.main_selected_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "JA_tf_bastion_allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:540690943472:security-group/sg-09b052ad40b7c3ae9",
            "description": "Allow SSH inbound traffic towards bastion instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b052ad40b7c3ae9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-bastion",
            "name_prefix": null,
            "owner_id": "540690943472",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "mixed",
              "Name": "JA-tf-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0553d4ec4e36d1c59"
          },
          "dependencies": [
            "aws_vpc.main_selected_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "JA_tf_test_main_subnet-az1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:540690943472:subnet/subnet-02bdcbb5d66cfd3ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/20",
            "id": "subnet-02bdcbb5d66cfd3ca",
            "map_public_ip_on_launch": true,
            "owner_id": "540690943472",
            "tags": {
              "Environment": "mixed",
              "Name": "Ja-tf- AZ1 PUBLIC"
            },
            "vpc_id": "vpc-0553d4ec4e36d1c59"
          },
          "dependencies": [
            "aws_vpc.main_selected_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "JA_tf_test_secondary_subnet-az2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:540690943472:subnet/subnet-0f028abc5fc50c3ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-0f028abc5fc50c3ee",
            "map_public_ip_on_launch": true,
            "owner_id": "540690943472",
            "tags": {
              "Environment": "mixed",
              "Name": "Ja-tf- AZ2 PUBLIC"
            },
            "vpc_id": "vpc-0553d4ec4e36d1c59"
          },
          "dependencies": [
            "aws_vpc.main_selected_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "JA_tf_test_terciary_subnet-az3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:540690943472:subnet/subnet-054cf0ae1c0d36e2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.32.0/20",
            "id": "subnet-054cf0ae1c0d36e2d",
            "map_public_ip_on_launch": true,
            "owner_id": "540690943472",
            "tags": {
              "Environment": "mixed",
              "Name": "Ja-tf- AZ3 PUBLIC"
            },
            "vpc_id": "vpc-0553d4ec4e36d1c59"
          },
          "dependencies": [
            "aws_vpc.main_selected_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_selected_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:540690943472:vpc/vpc-0553d4ec4e36d1c59",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01cef63837e1599f8",
            "default_route_table_id": "rtb-0b0346c2fcfde4d70",
            "default_security_group_id": "sg-0dd16dec2d3c69ebe",
            "dhcp_options_id": "dopt-4a040b23",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0553d4ec4e36d1c59",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b0346c2fcfde4d70",
            "owner_id": "540690943472",
            "tags": {
              "Name": "Main VPC"
            }
          }
        }
      ]
    }
  ]
}